--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="User list">
+  <meta name="keywords" content="user, list, proxy, react, webpack">
   <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
   <title>User list</title>
 </head>
